<resources>
	<string name="app_name">Kraven</string>
	<string name="sure_logout">Are your sure you want to logout?</string>
	<string name="items">Items</string>
	<string name="cash_on_delivery_info">Cash on Delivery Info</string>
	<string name="delivery_charge_info">Delivery Charge Info</string>
	<string name="cash_delivery_text">Account will be terminated if cash not paid on delivery.</string>
	<string name="delivery_charger_text_beverage">Delivery charge will be calculated based on the distance between beverage location and delivery location.</string>
	<string name="delivery_charger_text_restaurant">Delivery charge will be calculated based on the distance between restaurant location and delivery location.</string>
	<string name="ok">Ok</string>
	<string name="how_to_apply">To redeem your wallet click on the \“Wallet Balance\” box. Type the amount you want to apply on the keyboard. Once you type the amount press \“Done\" or \"Ok\” and amount will be applied to your total.</string>
	<string-array name="drawer_menu">
		<item>Home</item>
		<item>Promos</item>
		<item>Wallet</item>
		<item>Refer A Friend</item>
		<item>My Profile</item>
		<item>Order History</item>
		<item>Favorites</item>
		<item>Edit Island</item>
		<item>Contact Us</item>
		<item>Support</item>
		<item>Logout</item>
	
	</string-array>
	<string-array name="event_array">
		<item>Wedding</item>
		<item>Engagement</item>
	</string-array>
	<string name="dress_code">Bartender Dress Code</string>
	<string name="long_text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
	<string name="refer_friend">If you enjoy the app, refer your friends and receive a reward in your wallet! Share your referral code!</string>
	<string name="email">Email</string>
	<string name="referral_code">Referral Code (Optional)</string>
	<string name="password">Password</string>
	<string name="forgot_password">Forgot Password?</string>
	<string name="login">Login</string>
	<string name="dont_acccount">Don\'t have an account?</string>
	<string name="enter_email_address">Please enter email address</string>
	<string name="enter_valid_email">Please enter valid email address</string>
	<string name="enter_password">Please enter password</string>
	<string name="enter_valid_password">Password should be minimum 8 or maximum 25 characters long. It contains must be at least 1 numbers.</string>
	<string name="please_enter_referral_code">Please enter referral code</string>
	<string name="forgot_instruction">Enter your email below and we will send you a link to reset your password.</string>
	<string name="send">Send</string>
	<string name="sign_up">Sign Up</string>
	<string name="name">Name</string>
	<string name="first_name">First Name</string>
	<string name="last_name">Last Name</string>
	<string name="country_code">County Code</string>
	<string name="mobile_number">Mobile Number</string>
	<string name="confirm_password">Confirm Password</string>
	<string name="agree">I agree Terms &amp; Conditions</string>
	<string name="terms_and_conditions">Terms And Conditions</string>
	<string name="search">Search</string>
	<string name="enter_name">Please enter name</string>
	<string name="enter_first_name">Please enter first name</string>
	<string name="enter_last_name">Please enter last name</string>
	<string name="enter_valid_name">Please enter valid name</string>
	<string name="enter_country_code">Enter code</string>
	<string name="enter_mobile_number">Please enter mobile number</string>
	<string name="enter_valid_mobile_number">Enter valid number</string>
	<string name="password_not_match">Password mis match</string>
	<string name="accept_term_condition">Please accept terms and conditions</string>
	<string name="gender">Gender</string>
	<string name="male">Male</string>
	<string name="female">Female</string>
	<string name="rathernotsay">Rather not say</string>
	<string name="dob">DOB</string>
	<string name="profile_incompletion">Profile Incompletion</string>
	<string name="profile_incompletion_text">Please add your gender and DOB</string>
	<string name="address">Address</string>
	<string name="hello_worldRed"><![CDATA[<b><font color=#cc0029>*</font></b>]]></string>
	<string name="asteriskred"><font color='#cc0029'>*</font></string>
	<string name="auto_detect_location">Auto Detect My Location</string>
	<string name="address_type">Address Type(Home, Work, Hotel, Etc.)</string>
	<string name="country">Country</string>
	<string name="city">City</string>
	<string name="locality">Building Name</string>
	<string name="house_no">House No, Room No</string>
	<string name="landmark">Landmark/Special Instructions</string>
	<string name="save">Save</string>
	<string name="need_permissions">Need Permissions</string>
	<string name="permission_message">This app need permissions to use this feature.You can grant them in app settings.</string>
	<string name="yes">YES</string>
	<string name="no">NO</string>
	<string name="enter_address">Please enter address</string>
	<string name="enter_address_type">Please enter address type</string>
	<string name="enter_country">Please enter country</string>
	<string name="enter_city">Please enter city</string>
	<string name="enter_locality">Please enter locality, area or street</string>
	<string name="enter_house_no">Please enter house no, room No</string>
	<string name="enter_landmark">Please enter landmark</string>
	<string name="can_not_find_address">Can not find address</string>
	<string name="verification">Verification</string>
	<string name="verification_instruction">We sent you an One Time Password via SMS on your registered mobile number.</string>
	<string name="code">Code</string>
	<string name="not_received">Message not received? Resend</string>
	<string name="enter_code">Please enter verification code</string>
	<string name="see_all">See All</string>
	<string name="off">20 % OFF ON \nALL FOOD ITEMS Valid for over $50</string>
	<string name="services">Services</string>
	<string name="nearby">%d Nearby Restaurant</string>
	<string name="menu">Menu</string>
	<string name="today_special">Today\'s Special</string>
	<string name="future_order">Future Food Order</string>
	<string name="restaurant_reservation">Restaurant Reservation</string>
	<string name="open_hour">Opening Hours</string>
	<string name="minimum_order">Minimum order amount (Of Subtotal)</string>
	<string name="view_cart">View Cart</string>
	<string name="review">Review</string>
	<string name="your_cart">Your Cart</string>
	<string name="apply_promo_code">Apply Promo Code</string>
	<string name="add_tip">Add Driver Tip</string>
	<string name="add_wallet">Add Wallet</string>
	<string name="add_note">Add Note</string>
	<string name="enter_promo_code">Enter Promo Code</string>
	<string name="done">Done</string>
	<string name="delivery_type">Order Type</string>
	<string name="pickup">Pickup</string>
	<string name="delivery">Delivery</string>
	<string name="price_details">Price Detail</string>
	<string name="change">Add/Change</string>
	<string name="sub_total">Subtotal</string>
	<string name="delivery_charge">Delivery Charge</string>
	<string name="vat">VAT (%s)</string>
	<string name="total">Total</string>
	<string name="please_select_payment_method">Please select payment method</string>
	<string name="debit_card">Debit/Credit Card</string>
	<string name="credit_card">Credit Card</string>
	<string name="cash_on_delivery">Cash On Delivery</string>
	<string name="wallet">Wallet</string>
	<string name="wallet_edit_text">Wallet Balance ($%.2f)</string>
	<string name="checkout">Checkout</string>
	<string name="add_address">Add Address</string>
	<string name="select_address">Select Address</string>
	<string name="select_tip">Please select tip</string>
	<string name="payment">Payment</string>
	<string name="total_amount">Total Amount</string>
	<string name="wallet_balance">Wallet Balance</string>
	<string name="required_amount">Required Amount</string>
	<string name="choose_card">Choose Card</string>
	<string name="pay">Pay</string>
	<string name="please_wait">Please wait... \n we are sending your order to the restaurant</string>
	<string name="cancel">Cancel</string>
	<string name="track_order">Track Order</string>
	<string name="we_have_received_your_order">We have received your order.</string>
	<string name="order_placed">Order Placed</string>
	<string name="your_order_has_been_confirmed">Your order has been confirmed.</string>
	<string name="order_confirmed">Order Confirmed</string>
	<string name="we_are_preparing_your_food">We are preparing your food.</string>
	<string name="order_process">Order Being Processed (%s mins estimated preparation time)</string>
	<string name="food_on_the_way">Food On The Way</string>
	<string name="beverage_on_the_way">Beverage On The Way</string>
	<string name="_20_mins_estimated_delivery_time">%s mins estimated delivery time.</string>
	<string name="delivered">Delivered</string>
	<string name="your_order_has_been_delivered">Your order has been delivered!</string>
	<string name="track">Track</string>
	<string name="rating">Rating</string>
	<string name="write_comment">Write Comment</string>
	<string name="submit">Submit</string>
	<string name="order_history">Order History</string>
	<string name="my_order">My Orders</string>
	<string name="order_id">Order ID: %s</string>
	<string name="order_id_small">Order Id: %s</string>
	<string name="qty">Qty : %s</string>
	<string name="my_order_details">My Order Detail</string>
	<string name="restaurant">Restaurant</string>
	<string name="note">Note</string>
	<string name="tip">Driver Tip (%s)</string>
	<string name="payment_method">Payment Method</string>
	<string name="discount">Discount</string>
	<string name="payment_mode">Payment Mode :</string>
	<string name="card_number">Card Number :</string>
	<string name="transaction_id">Transaction ID :</string>
	<string name="order_food">Order Food</string>
	<string name="future_food_order">Future Food Order</string>
	<string name="date">Date</string>
	<string name="time">Time</string>
	<string name="next">Next</string>
	<string name="hours">Hours</string>
	<string name="minutes">Minutes</string>
	<string name="select_vendor">Select Vendor</string>
	<string name="date_time">Date &amp; Time: %s</string>
	<string name="topping">Topping :</string>
	<string name="order_beverage">Order Beverage</string>
	<string name="doller_sign">$</string>
	<string name="set_beverage">Set Beverage Delivery Date &amp; Time</string>
	<string name="you_must_be_18">You must be 18 years or older to purchase alcoholic beverages.</string>
	<string name="add_special_note">Add Special Note</string>
	<string name="enter_here">Enter here..</string>
	<string name="menu_title">Placed</string>
	<string name="special_order">Special Order</string>
	<string name="beverage_deliver_info">Order must be placed 6 days in advanced</string>
	<string name="beverage">Beverage</string>
	<string name="brand">Brand  e.g. Heniken</string>
	<string name="quantity_type">Quantity Type</string>
	<string name="quantity">Quantity</string>
	<string name="beverage_delivery_date">Beverage Delivery Date</string>
	<string name="admin_comments">Admin Comments</string>
	<string name="change_password">Change Password</string>
	<string name="update">Update</string>
	<string name="old_password">Old Password</string>
	<string name="new_password">New Password</string>
	<string name="edit">Edit</string>
	<string name="delete">Delete</string>
</resources>