<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="@dimen/_15sdp"
    android:paddingTop="@dimen/_10sdp"
    android:paddingEnd="@dimen/_15sdp">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textViewChangePassword"
        style="@style/AuthHeadingTextView"
        android:text="@string/change_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputLayoutOldPassword"
        style="@style/AuthTextInputLayout.Black"
        android:layout_marginTop="@dimen/_25sdp"
        android:theme="@style/AuthEditTextColorBlack"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewChangePassword">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextOldPassword"
            style="@style/AuthEditText.Black"
            android:background="@drawable/edt_bg_normal"
            android:hint="@string/old_password"
            android:inputType="textPassword"
            android:theme="@style/AuthEditTextColor" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputLayoutNewPassword"
        style="@style/AuthTextInputLayout.Black"
        android:layout_marginTop="@dimen/_25sdp"
        android:theme="@style/AuthEditTextColorBlack"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputLayoutOldPassword">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextNewPassword"
            style="@style/AuthEditText.Black"
            android:background="@drawable/edt_bg_normal"
            android:hint="@string/new_password"
            android:inputType="textPassword"
            android:theme="@style/AuthEditTextColor" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputLayoutConfirmPassword"
        style="@style/AuthTextInputLayout.Black"
        android:layout_marginTop="@dimen/_25sdp"
        android:theme="@style/AuthEditTextColorBlack"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputLayoutNewPassword">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextConfirmPassword"
            style="@style/AuthEditText.Black"
            android:background="@drawable/edt_bg_normal"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:theme="@style/AuthEditTextColor" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonUpdate"
        style="@style/CommonButton"
        android:text="@string/update"
        app:cornerRadius="@dimen/_20sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputLayoutConfirmPassword" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textViewForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:fontFamily="@font/work_sans_regular"
        android:text="@string/forgot_password"
        android:textColor="@color/black"
        android:textSize="@dimen/_10ssp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonUpdate" />

</androidx.constraintlayout.widget.ConstraintLayout>